--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,6 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+NOCAPTCHA_SITEKEY=your-site-key
+NOCAPTCHA_SECRET=your-secret-key
